# foq

./: .env  .gitattributes  .gitignore  .space.kts  Cargo.toml  Cross.toml  config.toml  foq-dev.sqlite  test_coverage.py
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-050d97c3ff7c2b732a10c4a45e0a97d8c021c7e372e4d81bb5d20873ccf3d076.json  query-248ec4302c609ab4152f8185d1f3ec9b36fd110f6c1fdc151b8ee234cad618e9.json  query-511e3b7aad8782771065006529f5d92163a19c9409a937d7c82a5b817ff2da9b.json  query-57b1ae4aed204ff68eafe935aa114927b2d251456ca47de91c525621bad4fb9b.json  query-86ef68631ccd7ddd15418a6358cb3544b8e6d8057713f1a75b7b0fd32a8bf6f9.json  query-8afaad4e2eba35a48887c9adc8637fd567ed56235accdd6daf9919e2b2544ded.json  query-9f76d66eeacc26be1d15f97d29809f1320587cc38db827f3db0d20d24eaba64a.json  query-f8672c841e095b39b512b0f4081281e88a9c7c34463fcafa8da0a8b0ffbedcec.json
certs/: test-cert.pem  test-key.pem
sql/: data.sql  schema.sql  scheme.sql
src/: global_context.rs  lab.rs  main.rs  runner.rs
src/auth/: auth_error.rs  auth_provider.rs  data_source.rs  login_form.rs  mod.rs  sqlite_data_source.rs  user_data.rs  user_permission.rs
src/commands/: command.rs  commands.rs  executable.rs  mod.rs  reply.rs  reply_code.rs
src/commands/impl/: abor.rs  auth.rs  cdup.rs  cwd.rs  dele.rs  feat.rs  list.rs  mfct.rs  mfmt.rs  mkd.rs  mlsd.rs  mod.rs  nlst.rs  noop.rs  opts.rs  pass.rs  pasv.rs  pbsz.rs  prot.rs  pwd.rs  rest.rs  retr.rs  rmd.rs  rmda.rs  shared.rs  stor.rs  syst.rs  type.rs  user.rs
src/data_channels/: data_channel_wrapper.rs  mod.rs  quic_data_channel.rs  quic_only_data_channel_wrapper.rs  quic_quinn_data_channel_wrapper.rs  quinn_data_channel.rs  standard_data_channel_wrapper.rs  tcp_data_channel.rs  tls_data_channel.rs
src/handlers/: connection_handler.rs  data_channel_wrapper.rs  mod.rs  quic_only_connection_handler.rs  quic_only_data_channel_wrapper.rs  quic_quinn_connection_handler.rs  reply_sender.rs  standard_connection_handler.rs  standard_data_channel_wrapper.rs  standard_tls_connection_handler.rs
src/io/: command_processor.rs  connection_mode.rs  data_type.rs  entry_data.rs  error.rs  file_system_view.rs  file_system_view_root.rs  mod.rs  open_options_flags.rs  recursive_view.rs  reply.rs  reply_code.rs  session.rs  session_properties.rs  timeval.rs  transfer_mode.rs  view.rs  view_dispatch.rs
src/listeners/: listenable.rs  mod.rs  quic_only_listener.rs  quinn_listener.rs  standard_listener.rs
src/session/: command_processor.rs  connection_mode.rs  data_type.rs  mod.rs  protection_mode.rs  session_properties.rs  transfer_mode.rs
src/utils/: mod.rs  test_utils.rs  tls_utils.rs
test_files/: 1MiB.txt  2KiB.txt  lorem_10_paragraphs.txt
