[package]
name = "foq"
version = "0.7.2"
authors = ["Valentín Bolfík"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-channel = "2.5.0"
async-trait = "0.1.89"
chrono = "0.4.42"
config = { version = "0.15.18", features = ["toml"] }
derive_builder = "0.20.2"
dyn-clone = "1.0.20"
futures = "0.3.31"
once_cell = "1.21.3"
path-clean = "1.0.1"
quinn =  "0.11.9"
regex = "1.11.3"
rustls = { version = "0.23.32", default-features = false, features = ["aws_lc_rs"]}
rustls-pemfile = "2.2.0"
s2n-quic = { version = "1.66.0", default-features = true, features = ["provider-tls-rustls", "provider-event-tracing", "zeroize"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-rustls = "0.26.4"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
walkdir = "2.5.0"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
blake3 = "1.8.2"
uuid = { version = "1.18.1", features = ["v4"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[target.'aarch64-linux-android'.dependencies]
aws-lc-rs = { version = "1.14.1", features = ["bindgen"]}
