[package]
name = "foq"
version = "0.7.5"
authors = ["Valentín Bolfík"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
async-channel = "2.5.0"
async-trait = "0.1.89"
chrono = "0.4.44"
config = { version = "0.15.22", features = ["toml"] }
derive_builder = "0.20.2"
dyn-clone = "1.0.20"
futures = "0.3.32"
once_cell = "1.21.4"
path-clean = "1.0.1"
quinn =  "0.11.9"
regex = "1.12.3"
rustls = { version = "0.23.37", default-features = false, features = ["aws_lc_rs"]}
rustls-pemfile = "2.2.0"
s2n-quic = { version = "1.76.0", default-features = true, features = ["provider-tls-rustls", "provider-event-tracing", "zeroize"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "tracing"] }
tokio-rustls = "0.26.4"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-attributes = "0.1.31"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
walkdir = "2.5.0"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
blake3 = "1.8.3"
uuid = { version = "1.22.0", features = ["v4"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[target.'aarch64-linux-android'.dependencies]
aws-lc-rs = { version = "1.16.2", features = ["bindgen"]}
